--- a/templates/breed-list.html
+++ b/templates/breed-list.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    ${head}
     <title>Breeds</title>
 </head>
 <body>
 
     <ul>
         ${allDogs.map(dog =>`
-            <li><a href="http://127.0.0.1:3000/breed/${dog.name}"> ${dog.name} </a></li>
+            <li><a href="http://127.0.0.1:3000/breed/${dog.breed}"> ${dog.name} </a></li>
         `).join('')} 
     </ul>
 
