--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -4,23 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    ${head}
     <title>Breeds</title>
 </head>
 <body>
 
     <ul>
-        ${allDogs.map(dog =>`
-            <li><a href="http://127.0.0.1:3000/breed/${dog.breed}"> ${dog.breed} </a></li>
-        `).join('')},
+        <li> ${dog.breed} </li>
 
-        ${allDogs.map(dog =>`
-            <li><a href="http://127.0.0.1:3000/breed/${dog.image}"> ${dog.image} </a></li>
-        `).join('')},
-
-        ${allDogs.map(dog =>`
-            <li><a href="http://127.0.0.1:3000/breed/${dog.movie_name}"> ${dog.movie_name} </a></li>
-        `).join('')},
-
+        <li> ${image} </li>
+    
+        <li> ${dog.movie_name} </li>
     </ul>
 
 </body>
