--- a/templates/home.html
+++ b/templates/home.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    ${head}
     <title>Home</title>
 </head>
 <body>
     
 <h1> Welcome to the page of Famous Dogs</h1>
-<a href="/breeds"> See my breeds list</a>
+<a href="/breed"> See my breeds list</a>
 
 
 </body>
